sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:4: error: '(' expected but identifier found.
  for i in range(1,n-3){
      ^AlgGnomeSort:13: error: illegal start of simple expression
} 
^